update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: And-miles-to-go-before-I-sleep_72030
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 72030-h/images/cover.jpg
 creator:
   author:
     agent_name: Nolan, William F.
@@ -8,6 +11,8 @@ creator:
     gutenberg_agent_id: '33575'
     url: http://www.gutenberg.org/2009/agents/33575
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/72030#And-miles-to-go-before-I-sleep
 gutenberg_issued: '2023-11-04'
 identifiers:
   gutenberg: '72030'
